--- a/tests/2/window.css
+++ b/tests/2/window.css
@@ -2,7 +2,7 @@
     background: -webkit-linear-gradient(rgba(233, 233, 233, 1.0), rgba(178, 178, 178, 1.0) 21px, #EDEDED, #EDEDED 26px);
     background: -moz-linear-gradient(rgba(233, 233, 233, 1.0), rgba(178, 178, 178, 1.0) 21px, #EDEDED, #EDEDED 23px);
     border-radius: 5px;
-    /* box-shadow:inset 0 1px 0 rgba(255,255,255,.6), 0 22px 70px 4px rgba(0,0,0,0.56), 0 0 0 1px rgba(0, 0, 0, 0.3); */
+    box-shadow:inset 0 1px 0 rgba(255,255,255,.6), 0 22px 70px 4px rgba(0,0,0,0.56), 0 0 0 1px rgba(0, 0, 0, 0.3);
     text-align: left;
     position:absolute;
     z-index:0;
@@ -96,11 +96,10 @@ nav.control-window a.deactivate {
     margin-bottom:15px;
 }
 .window.finder {
-    width: 100%;
-    left: 0;
-    top: 0;
-    margin: 0;
-    height: 100%;
+    left:   90px;
+    top:    90px;
+    bottom: 90px;
+    right:  90px;
 }
 .container-inside img {
     margin:0 0 10px 0;
